--- a/config.env
+++ b/config.env
@@ -3,5 +3,5 @@ PORT=3000
 DATABASE=mongodb+srv://mapdb:<db_password>@meobilivang.kqfr4.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DATABASE_PASSWORD=depzaithimoiconhiuduaiu1234
 
-JWT_SECRET=AhiHidongOk                 
+JWT_STRING=AhiHidongOk                 
 JWT_EXPIRES_IN=1d
