--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A super ultra basic to do app",
   "main": "app.js",
   "scripts": {
-    "start": ""
+    "start": "SET NODE_ENVIRONEMNT=dev && node server.js",
+    "test": "mocha --timeout 10000"
   },
   "author": "Phong D. (Julian) Nguyen",
   "license": "MIT",
