build: jenkins scripts + docker

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,15 +1,29 @@
 pipeline {
     agent {
         docker {
-            image 'node:lts-buster-slim' 
+            image 'node:lts-buster-slim'            // Docker image for testing environment
             args '-p 3400:3400' 
         }
     }
+
+    environment {
+        CI = 'true' 
+    }
+
     stages {
-        stage('Build') { 
+        stage('Build Project') { 
             steps {
-                sh 'npm install' 
+                sh './jenkins/scripts/build.sh' 
             }
         }
+
+        stage('Test') {
+            steps {
+                sh './jenkins/scripts/test.sh'
+            }
+        }
+
     }
+
 }
+
