build: edit Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: '2'
 services:
   to-do-app:
     build: .
+    image: simple-to-do-nodejs:1.1 
     ports:
       - "3400:3400"
     environment:
       NODE_ENVIROMMENT: development
       PORT: 3400
-      DATABASE: mongodb+srv://mapdb:<db_password>@meobilivang.kqfr4.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+      DATABASE: mongodb+srv://mapdb:depzaithimoiconhiuduaiu1234@meobilivang.kqfr4.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
       DATABASE_PASSWORD: depzaithimoiconhiuduaiu1234
       JWT_STRING: AhiHidongOk                 
       JWT_EXPIRES_IN: 1d
