--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -30,21 +30,21 @@ pipeline {
 
 	stage('Building Image') {
 		steps {
-			script {
+			//script {
 				sh 'docker ps'
 				sh 'whoami'
 				//dockerImage = docker.build registry + ":1.$BUILD_NUMBER" 
-			}
+			//}
 		}
 	}
 
 	stage('Push Image to DockerHub') {
 		steps {
-			script {
+			//script {
 				//docker.withRegistry('', registryCredential) {
 				//	dockerImage.push()
 				//}
-			}
+			//}
 		}
 	}
 
