--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -30,9 +30,10 @@ pipeline {
 
 	stage('Building Image') {
 		steps {
+			sh 'docker build -t pnguyen01/simple-to-do-nodejs-app:1.$BUILD_NUMBER .'
 			//script {
 				//sh 'docker ps'
-				sh 'whoami'
+				//sh 'whoami'
 				//dockerImage = docker.build registry + ":1.$BUILD_NUMBER" 
 			//}
 		}
