--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     agent {
         docker {
             image 'node:lts-buster-slim'            // Docker image for testing environment
-            args '-p 3400:3400' 
+            args '-p 3400:3400 -v /var/run/docker.sock:/var/run/docker.sock' 
         }
     }
 
@@ -30,12 +30,11 @@ pipeline {
 
 	stage('Building Image') {
 		steps {
-			sh 'docker build -t pnguyen01/simple-to-do-nodejs-app:1.$BUILD_NUMBER .'
-			//script {
-				//sh 'docker ps'
-				//sh 'whoami'
-				//dockerImage = docker.build registry + ":1.$BUILD_NUMBER" 
-			//}
+			script {
+				sh 'docker ps'
+				sh 'whoami'
+				dockerImage = docker.build registry + ":1.$BUILD_NUMBER" 
+			}
 		}
 	}
 
