build: test Jenkins

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
 
     agent {
         docker {
-            image 'node:lts-buster-slim'            // Docker image for testing environment
+            image 'pnguyen01/node-docker:latest'            // Docker image for testing environment
             args '-p 3400:3400"' 
         }
     }
@@ -31,8 +31,6 @@ pipeline {
 	stage('Building Image') {
 		steps {
 			script {
-				sh 'whoami'
-				sh 'apt-get update && apt-get install docker.io -y'
 				dockerImage = docker.build registry + ":1.$BUILD_NUMBER" 
 			}
 		}
