--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,8 +9,8 @@ pipeline {
 
     agent {
         docker {
-            image 'pnguyen01/node-docker:latest'            // Docker image for testing environment
-            args '-p 3400:3400"' 
+            image 'pnguyen01/node-docker:1.1'            // Docker image for testing environment
+            args '-p 3400:3400 --privileged -v /var/run/docker.sock:/var/run/docker.sock' 
         }
     }
 
