--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
 
 	stage('Building Image') {
 		steps {
+			sh 'chmod 666 /var/run/docker.sock'
 			script {
 				dockerImage = docker.build registry + ":1.$BUILD_NUMBER" 
 			}
