build: edit Jenkinsfile

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -47,6 +47,12 @@ pipeline {
 		}
 	}
 
+	stage('Remove built image from local machine') {
+		steps {
+			sh './jenkins/scripts/remove-img.sh'
+		}
+	}
+
     }
 
 }
