--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,6 @@
 pipeline {
 
-    agent {
-    	node {
-		label: 'docker'
-	}
-    }
+    agent { node { label: 'docker' } }
 
     environment {
 		registry = "pnguyen01/simple-to-do-nodejs-app"
