build: edit Ansible syntax

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -16,6 +16,6 @@
       - "3400:3400"
     env:
         PORT: "{{ app_port | quote }}"
-        DATABASE: "{{ database | quote }}"
+        DATABASE: "{{ database }}"
         JWT_STRING: "{{ jwt_string | quote }}"                 
         JWT_EXPIRES_IN: "{{ jwt_expiration | quote }}"
